Corrected css for chrome alignment issue.

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ body {
 #container {
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   height: 75vh;
   min-height: 350px;
